--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -10,10 +10,15 @@
 
 <body>
 
-    <a class="scrollToTop btn btn-lg btn-dark" href="#">
+    <button class="scrollToTop btn btn-lg btn-dark user-select-none" onclick="scrollToTop()">
         <img src="../assets/svg/up-arrow-svgrepo-com.svg" width="20" height="20" alt="">
-    </a>
-
+    </button>
+    <script>
+        function scrollToTop() {
+            document.body.scrollTo({ top: 0, behavior: "smooth" });
+            document.documentElement.scrollTo({ top: 0, behavior: "smooth" });
+        }
+    </script>
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
             <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
@@ -55,7 +60,7 @@
         </header>
 
         <section class="container">
-            <div class="row">
+            <div class="row align-items-start">
                 <div
                     class="col-sm-12 col-lg-6 order-2 order-lg-1 blob blob-left image justify-content-center justify-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/036_ret-sw.webp"
@@ -90,7 +95,7 @@
                             Entscheidungen waren dennoch zu treffen. Nachdem sie ihre Zelte in New
                             York abgebrochen hatten,
                             entschieden sie sich, im Juli 2016 in Kristinas Heimat Kroatien zu
-                            heiraten. Anschließend zogen die
+                            heiraten. Anschließend zog die
                             junge Familie in Sebastians Heimatstadt Reichenbach im Vogtland, wo sie
                             bis heute lebt und
                             trainiert.
@@ -101,7 +106,7 @@
         </section>
 
         <section class="container">
-            <div class="row">
+            <div class="row align-items-start">
                 <div class="col-sm-12 col-lg-6">
                     <div class="text animate right">
                         <h2>Neues Leben zu dritt</h2>
@@ -129,7 +134,6 @@
                             Kristina und Sebastian so auf ihr vorheriges Leistungsniveau zurück. Der
                             Blick wurde frei für neue
                             sportliche Herausforderungen.
-
                         </p>
                     </div>
                 </div>
@@ -141,7 +145,7 @@
         </section>
 
         <section class="container">
-            <div class="row">
+            <div class="row align-items-start">
                 <div
                     class="col-sm-12 col-lg-6 order-2 order-lg-1 blob blob-left image justify-content-center justify-lg-start">
                     <img class="img-fluid animate" src="../assets/img/no-bg/149_ret-sw.webp"
@@ -169,9 +173,9 @@
                             den Leistungssport und ein
                             intaktes Familienleben sehr gut unter einen Hut“, ist Sebastian
                             überzeugt. Die Erfolge, die beide
-                            seitdem auf nationaler und internationaler Bühne erreichten, geben im
-                            recht und bestärken sie in der
-                            Überzeugung, den richtigen Weg zu beschreiten.
+                            seitdem auf nationaler und internationaler Bühne erreichten, geben ihm
+                            recht und bestärken sie in
+                            der Überzeugung, den richtigen Weg zu beschreiten.
                         </p>
                     </div>
                 </div>
