--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-
-  <a class="scrollToTop btn btn-lg btn-dark" href="#">
+  <button class="scrollToTop btn btn-lg btn-dark user-select-none" onclick="scrollToTop()">
     <img src="../assets/svg/up-arrow-svgrepo-com.svg" width="20" height="20" alt="">
-  </a>
-
+  </button>
+  <script>
+    function scrollToTop() {
+      document.body.scrollTo({ top: 0, behavior: "smooth" });
+      document.documentElement.scrollTo({ top: 0, behavior: "smooth" });
+    }
+  </script>
   <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
     <div class="container">
       <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
@@ -52,7 +56,7 @@
 
     <header>
       <div class="container">
-        <h2>Vom Ungeplanten Glück</h2>
+        <h2>Das Marathonipaar</h2>
         <h1><span class="fName">Kristina & Sebastian</span> <span class="lName">Hendel</span></h1>
       </div>
     </header>
@@ -70,24 +74,18 @@
           <div class="text animate right">
             <h1>Gemeinsam nach Paris</h1>
             <p>
-              Jeder Sportler träumt von einem Start bei Olympischen Spielen. Kristina und
-              Sebastian
+              Jeder Sportler träumt von einem Start bei Olympischen Spielen. Kristina und Sebastian
               Hendel aus
-              Reichenbach verbindet die Liebe zueinander und zum Laufsport. Ein
-              gemeinsamer Start
-              bei
-              Olympia 2024
+              Reichenbach verbindet die Liebe zueinander und zum Laufsport. Ein gemeinsamer Start
+              bei Olympia 2024
               in Paris ist ihr großes Ziel.
             </p>
             <h2>Seit 2015 unzertrennlich</h2>
             <p>
-              Kristian und Sebastian Hendel lernten sich 2015 beim Sportstudium in New
-              York kennen
-              und
-              lieben.
-              Seitdem verfolgen sie ihre sportlichen Ziele gemeinsam. Dabei galt es einige
-              ungeplante
-              Hürden zu
+              Kristian und Sebastian Hendel lernten sich 2015 beim Sportstudium in New York kennen
+              und lieben.
+              Seitdem verfolgen sie ihre sportlichen Ziele gemeinsam. Dabei galt es, einige
+              ungeplante Hürden zu
               überwinden.
             </p>
             <a href="about-us.html" class="btn btn-lg">Mehr Erfahren</a>
@@ -102,11 +100,9 @@
           <div class="text animate left">
             <h2>Kristina Hendel</h2>
             <p>
-              ...gehört von Kindesbeinen an zu den besten Läuferinnen ihres Heimatlandes
-              Kroatien.
+              ...gehört von Kindesbeinen an zu den besten Läuferinnen ihres Heimatlandes Kroatien.
               Dort hält sie
-              noch immer einen nationalen Rekord. Je länger ihre Karriere andauert, desto
-              länger
+              noch immer einen nationalen Rekord. Je länger ihre Karriere andauert, desto länger
               werden auch ihre
               Erfolgsstrecken.
             </p>
@@ -131,11 +127,9 @@
           <div class="text animate right">
             <h2>Sebastian Hendel</h2>
             <p>
-              ...verdankt seinen Namen einem ganz Großen der Leichtathletik. Dass der
-              Reichenbacher
+              ...verdankt seinen Namen einem ganz Großen der Leichtathletik. Dass der Reichenbacher
               einmal eine
-              große Läuferkarriere einschlagen würde, konnten sich seine ersten Trainer
-              allerdings
+              große Läuferkarriere einschlagen würde, konnten sich seine ersten Trainer allerdings
               kaum
               vorstellen.
             </p>
@@ -150,8 +144,8 @@
         <div class="row">
           <div class="col-6 col-lg-3">
             <a href="https://www.swrc.de/" target="_blank" class="image">
-              <img src="../assets/img/sponsors/stadtwerke.webp"
-                alt="Logo der Stadtwerke Reichenbach" class="img-fluid">
+              <img src="../assets/svg/sponsors/stadtwerke.svg" alt="Logo der Stadtwerke Reichenbach"
+                class="img-fluid">
             </a>
           </div>
           <div class="col-6 col-lg-3">
@@ -160,14 +154,14 @@
             </a>
           </div>
           <div class="col-6 col-lg-3">
-            <a href="https://sponser.de/" target="_blank" class="image">
-              <img src="../assets/svg/sponsors/sponser.svg" alt="Logo von Sponser"
+            <a href="https://www.mietens.com/" target="_blank" class="image">
+              <img src="../assets/svg/sponsors/mietens.svg" alt="Logo von Mietens"
                 class="img-fluid">
             </a>
           </div>
           <div class="col-6 col-lg-3">
-            <a href="https://www.mietens.com/" target="_blank" class="image">
-              <img src="../assets/svg/sponsors/mietens.svg" alt="Logo von Mietens"
+            <a href="https://sponser.de/" target="_blank" class="image">
+              <img src="../assets/svg/sponsors/sponser.svg" alt="Logo von Sponser"
                 class="img-fluid">
             </a>
           </div>
@@ -198,8 +192,34 @@
             <li class="nav-item"><a class="nav-link link-light" href="about-us.html">Über uns</a>
             </li>
             <li class="nav-item"><a class="nav-link link-light" href="kristina.html">Kristina</a>
+              <a class="me-2" href="https://www.instagram.com/kristina_hendel_">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-instagram" viewBox="0 0 16 16">
+                  <path
+                    d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
+                </svg></a>
+              <a href="https://www.facebook.com/kristina.bozic.10/">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-facebook" viewBox="0 0 16 16">
+                  <path
+                    d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                </svg>
+              </a>
             </li>
             <li class="nav-item"><a class="nav-link link-light" href="sebastian.html">Sebastian</a>
+              <a class="me-2" href="https://www.instagram.com/sebastian_hendel">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-instagram" viewBox="0 0 16 16">
+                  <path
+                    d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
+                </svg></a>
+              <a href="https://www.facebook.com/basti.hendel">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-facebook" viewBox="0 0 16 16">
+                  <path
+                    d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
