--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -10,10 +10,15 @@
 
 <body>
 
-    <a class="scrollToTop btn btn-lg btn-dark" href="#">
+    <button class="scrollToTop btn btn-lg btn-dark user-select-none" onclick="scrollToTop()">
         <img src="../assets/svg/up-arrow-svgrepo-com.svg" width="20" height="20" alt="">
-    </a>
-
+    </button>
+    <script>
+        function scrollToTop() {
+            document.body.scrollTo({ top: 0, behavior: "smooth" });
+            document.documentElement.scrollTo({ top: 0, behavior: "smooth" });
+        }
+    </script>
     <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
         <div class="container">
             <a class="navbar-brand" href="/" aria-label="Logo with link to the home page">
@@ -173,10 +178,10 @@
             <h3>Hinweis zur verantwortlichen Stelle</h3>
             <p>Die verantwortliche Stelle f&uuml;r die Datenverarbeitung auf dieser Website ist:</p>
             <p>Sebastian Hendel<br />
-                Krummer Weg 6c<br />
+                Postfach 1234<br />
                 08468 Reichenbach</p>
 
-            <p>E-Mail: info@hendel-running.de</p>
+            <p>E-Mail: kontakt@hendel-running.de</p>
             <p>Verantwortliche Stelle ist die nat&uuml;rliche oder juristische Person, die allein
                 oder
                 gemeinsam
