--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../assets/svg/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Kontaktieren Sie Kristina und Sebastian Hendel, um mehr über ihre Reise und Erfolge im Laufsport zu erfahren.">
+    <meta name="keywords" content="Kristina, Sebastian, Hendel, Laufen, Kontakt, Reise, Erfolge, running, Hendel Running ">
+    <meta name="robots" content="index, follow">
     <title>Kontakt</title>
 </head>
 
