--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../assets/svg/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Erfahren Sie mehr über Kristina und Sebastian Hendel, zwei leidenschaftliche Läufer mit dem Ziel bei den Olympischen Spielen 2024 in Paris zu starten.">
+    <meta name="keywords" content="Kristina, Sebastian, Hendel, Laufen, Olympische Spiele, Paris">
+    <meta name="robots" content="index, follow">
     <title>Sebastian und Kristina Hendel</title>
 </head>
 
