--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="../assets/svg/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Kristina und Sebastian Hendel teilen ihre Liebe zum Laufen und zueinander. Ihr Ziel ist es, gemeinsam bei den Olympischen Spielen 2024 in Paris anzutreten. Erfahren Sie mehr über ihre Reise und Erfolge in dieser inspirierenden Geschichte.">
+  <meta name="keywords" content="Kristina, Sebastian, Hendel, Laufen, Olympische Spiele, Paris, Reise, Erfolge, inspirierende Geschichte, running, Hendel Running">
+  <meta name="robots" content="index, follow">
   <title>Hendel Running</title>
 </head>
 
