--- a/src/pages/kristina.html
+++ b/src/pages/kristina.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../assets/svg/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Erfahren Sie mehr über Kristina Hendel, eine leidenschaftliche Läuferin mit dem Ziel, bei den Olympischen Spielen 2024 in Paris anzutreten. Entdecken Sie ihre Reise und Erfolge in dieser inspirierenden Geschichte.">
+    <meta name="keywords" content="Kristina, Hendel, Laufen, Olympische Spiele, Paris, Reise, Erfolge, inspirierende Geschichte, running, Hendel Running">
+    <meta name="robots" content="index, follow">
     <title>Kristina Hendel</title>
 </head>
 
