--- a/src/pages/sebastian.html
+++ b/src/pages/sebastian.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../assets/svg/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Erfahren Sie mehr über Sebastian Hendel, einen leidenschaftlichen Läufer mit dem Ziel, an den Olympischen Spielen 2024 in Paris teilzunehmen. Entdecken Sie seine Reise und Erfolge in dieser inspirierenden Geschichte.">
+    <meta name="keywords" content="Sebastian, Hendel, Laufen, Olympische Spiele, Paris, Reise, Erfolge, inspirierende Geschichte, running, Hendel Running">
+    <meta name="robots" content="index, follow">
     <title>Sebastian Hendel</title>
 </head>
 
